# quick-model-tests

./: .gitignore  LICENSE  Makefile  README.md  SPEC.md  pyproject.toml  run.sh
.github/workflows/: ci.yml
quick_model_tests/: __init__.py  capabilities.py  cli.py  client.py  config.py  conftest.py  recording.py
quick_model_tests/suites/: conftest.py  core.py  multimodal.py  multiturn.py  reasoning.py  robustness.py  streaming.py  tools.py
